--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+.App {
+    display: grid;
+    grid-template-areas: 
+    ". title ."
+    ". game controls";
+    grid-template-columns: repeat(3, 1fr);
+}
+
 .cell.empty {
     background-color: rgb(200, 200, 200);
 }
@@ -32,13 +40,18 @@
 
 h1 {
     text-align: center;
+    grid-area: title;
+}
+
+.controls {
+    grid-area: controls;
 }
 
 .board {
     border: 2px solid black;
     user-select: none;
     margin: auto;
-    width: fit-content;
+    grid-area: game;
 }
 
 .row {
