--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,11 @@
     display: flex;
     flex-direction: row-reverse;
     justify-content: flex-end;
-    gap: 10;
+    gap: 10px;
 }
 
 .cell.empty {
-    background-color: rgb(200, 200, 200);
+    background-color: #202020;
 }
 
 .cell.hidden {
@@ -60,7 +60,7 @@ h1 {
 }
 
 .board {
-    border: 2px solid black;
+    border: 2px solid #424242;
     user-select: none;
     margin: auto;
     grid-area: game;
@@ -73,5 +73,5 @@ h1 {
 .cell {
     width: 30px;
     aspect-ratio: 1;
-    border: 1px solid black;
+    border: 1px solid #424242;
 }
